@@ -1,172 +1,0 @@
-@comment $NetBSD: PLIST,v 1.7 2014/08/08 14:30:24 jmmv Exp $
-bin/kyua
-man/man1/kyua-about.1
-man/man1/kyua-config.1
-man/man1/kyua-db-exec.1
-man/man1/kyua-db-migrate.1
-man/man1/kyua-debug.1
-man/man1/kyua-help.1
-man/man1/kyua-list.1
-man/man1/kyua-report-html.1
-man/man1/kyua-report-junit.1
-man/man1/kyua-report.1
-man/man1/kyua-test.1
-man/man1/kyua.1
-man/man5/kyua.conf.5
-man/man5/kyuafile.5
-man/man7/kyua-build-root.7
-man/man7/kyua-results-files.7
-man/man7/kyua-test-filters.7
-share/doc/kyua-cli/AUTHORS
-share/doc/kyua-cli/COPYING
-share/doc/kyua-cli/NEWS
-share/doc/kyua-cli/README
-share/kyua-cli/examples/Kyuafile.top
-share/kyua-cli/examples/kyua.conf
-share/kyua-cli/misc/context.html
-share/kyua-cli/misc/index.html
-share/kyua-cli/misc/report.css
-share/kyua-cli/misc/test_result.html
-share/kyua-cli/store/migrate_v1_v2.sql
-share/kyua-cli/store/migrate_v2_v3.sql
-share/kyua-cli/store/schema_v3.sql
-${TESTS}tests/Kyuafile
-${TESTS}tests/kyua-cli/Kyuafile
-${TESTS}tests/kyua-cli/bootstrap/Kyuafile
-${TESTS}tests/kyua-cli/bootstrap/atf_helpers
-${TESTS}tests/kyua-cli/bootstrap/plain_helpers
-${TESTS}tests/kyua-cli/bootstrap/testsuite
-${TESTS}tests/kyua-cli/cli/Kyuafile
-${TESTS}tests/kyua-cli/cli/cmd_about_test
-${TESTS}tests/kyua-cli/cli/cmd_config_test
-${TESTS}tests/kyua-cli/cli/cmd_db_exec_test
-${TESTS}tests/kyua-cli/cli/cmd_debug_test
-${TESTS}tests/kyua-cli/cli/cmd_help_test
-${TESTS}tests/kyua-cli/cli/cmd_list_test
-${TESTS}tests/kyua-cli/cli/cmd_test_test
-${TESTS}tests/kyua-cli/cli/common_test
-${TESTS}tests/kyua-cli/cli/config_test
-${TESTS}tests/kyua-cli/cli/main_test
-${TESTS}tests/kyua-cli/engine/Kyuafile
-${TESTS}tests/kyua-cli/engine/config_test
-${TESTS}tests/kyua-cli/engine/context_test
-${TESTS}tests/kyua-cli/engine/drivers/Kyuafile
-${TESTS}tests/kyua-cli/engine/drivers/list_tests_helpers
-${TESTS}tests/kyua-cli/engine/drivers/list_tests_test
-${TESTS}tests/kyua-cli/engine/drivers/scan_results_test
-${TESTS}tests/kyua-cli/engine/exceptions_test
-${TESTS}tests/kyua-cli/engine/filters_test
-${TESTS}tests/kyua-cli/engine/kyuafile_test
-${TESTS}tests/kyua-cli/engine/metadata_test
-${TESTS}tests/kyua-cli/engine/report_junit_test
-${TESTS}tests/kyua-cli/engine/test_case_atf_helpers
-${TESTS}tests/kyua-cli/engine/test_case_plain_helpers
-${TESTS}tests/kyua-cli/engine/test_case_test
-${TESTS}tests/kyua-cli/engine/test_program_test
-${TESTS}tests/kyua-cli/engine/test_result_test
-${TESTS}tests/kyua-cli/engine/testers_test
-${TESTS}tests/kyua-cli/examples/Kyuafile
-${TESTS}tests/kyua-cli/examples/syntax_test
-${TESTS}tests/kyua-cli/integration/Kyuafile
-${TESTS}tests/kyua-cli/integration/cmd_about_test
-${TESTS}tests/kyua-cli/integration/cmd_config_test
-${TESTS}tests/kyua-cli/integration/cmd_db_exec_test
-${TESTS}tests/kyua-cli/integration/cmd_db_migrate_test
-${TESTS}tests/kyua-cli/integration/cmd_debug_test
-${TESTS}tests/kyua-cli/integration/cmd_help_test
-${TESTS}tests/kyua-cli/integration/cmd_list_test
-${TESTS}tests/kyua-cli/integration/cmd_report_html_test
-${TESTS}tests/kyua-cli/integration/cmd_report_junit_test
-${TESTS}tests/kyua-cli/integration/cmd_report_test
-${TESTS}tests/kyua-cli/integration/cmd_test_test
-${TESTS}tests/kyua-cli/integration/global_test
-${TESTS}tests/kyua-cli/integration/helpers/bad_test_program
-${TESTS}tests/kyua-cli/integration/helpers/bogus_test_cases
-${TESTS}tests/kyua-cli/integration/helpers/config
-${TESTS}tests/kyua-cli/integration/helpers/expect_all_pass
-${TESTS}tests/kyua-cli/integration/helpers/expect_some_fail
-${TESTS}tests/kyua-cli/integration/helpers/interrupts
-${TESTS}tests/kyua-cli/integration/helpers/metadata
-${TESTS}tests/kyua-cli/integration/helpers/simple_all_pass
-${TESTS}tests/kyua-cli/integration/helpers/simple_some_fail
-${TESTS}tests/kyua-cli/store/Kyuafile
-${TESTS}tests/kyua-cli/store/dbtypes_test
-${TESTS}tests/kyua-cli/store/exceptions_test
-${TESTS}tests/kyua-cli/store/layout_test
-${TESTS}tests/kyua-cli/store/metadata_test
-${TESTS}tests/kyua-cli/store/migrate_test
-${TESTS}tests/kyua-cli/store/read_backend_test
-${TESTS}tests/kyua-cli/store/read_transaction_test
-${TESTS}tests/kyua-cli/store/schema_inttest
-${TESTS}tests/kyua-cli/store/schema_v1.sql
-${TESTS}tests/kyua-cli/store/schema_v2.sql
-${TESTS}tests/kyua-cli/store/testdata_v1.sql
-${TESTS}tests/kyua-cli/store/testdata_v2.sql
-${TESTS}tests/kyua-cli/store/testdata_v3_1.sql
-${TESTS}tests/kyua-cli/store/testdata_v3_2.sql
-${TESTS}tests/kyua-cli/store/testdata_v3_3.sql
-${TESTS}tests/kyua-cli/store/testdata_v3_4.sql
-${TESTS}tests/kyua-cli/store/transaction_test
-${TESTS}tests/kyua-cli/store/write_backend_test
-${TESTS}tests/kyua-cli/store/write_transaction_test
-${TESTS}tests/kyua-cli/utils/Kyuafile
-${TESTS}tests/kyua-cli/utils/auto_array_test
-${TESTS}tests/kyua-cli/utils/cmdline/Kyuafile
-${TESTS}tests/kyua-cli/utils/cmdline/base_command_test
-${TESTS}tests/kyua-cli/utils/cmdline/commands_map_test
-${TESTS}tests/kyua-cli/utils/cmdline/exceptions_test
-${TESTS}tests/kyua-cli/utils/cmdline/globals_test
-${TESTS}tests/kyua-cli/utils/cmdline/options_test
-${TESTS}tests/kyua-cli/utils/cmdline/parser_test
-${TESTS}tests/kyua-cli/utils/cmdline/ui_test
-${TESTS}tests/kyua-cli/utils/config/Kyuafile
-${TESTS}tests/kyua-cli/utils/config/exceptions_test
-${TESTS}tests/kyua-cli/utils/config/keys_test
-${TESTS}tests/kyua-cli/utils/config/lua_module_test
-${TESTS}tests/kyua-cli/utils/config/nodes_test
-${TESTS}tests/kyua-cli/utils/config/parser_test
-${TESTS}tests/kyua-cli/utils/config/tree_test
-${TESTS}tests/kyua-cli/utils/datetime_test
-${TESTS}tests/kyua-cli/utils/env_test
-${TESTS}tests/kyua-cli/utils/format/Kyuafile
-${TESTS}tests/kyua-cli/utils/format/exceptions_test
-${TESTS}tests/kyua-cli/utils/format/formatter_test
-${TESTS}tests/kyua-cli/utils/fs/Kyuafile
-${TESTS}tests/kyua-cli/utils/fs/auto_cleaners_test
-${TESTS}tests/kyua-cli/utils/fs/exceptions_test
-${TESTS}tests/kyua-cli/utils/fs/lua_module_test
-${TESTS}tests/kyua-cli/utils/fs/operations_test
-${TESTS}tests/kyua-cli/utils/fs/path_test
-${TESTS}tests/kyua-cli/utils/logging/Kyuafile
-${TESTS}tests/kyua-cli/utils/logging/macros_test
-${TESTS}tests/kyua-cli/utils/logging/operations_test
-${TESTS}tests/kyua-cli/utils/memory_test
-${TESTS}tests/kyua-cli/utils/optional_test
-${TESTS}tests/kyua-cli/utils/passwd_test
-${TESTS}tests/kyua-cli/utils/process/Kyuafile
-${TESTS}tests/kyua-cli/utils/process/child_test
-${TESTS}tests/kyua-cli/utils/process/exceptions_test
-${TESTS}tests/kyua-cli/utils/process/fdstream_test
-${TESTS}tests/kyua-cli/utils/process/helpers
-${TESTS}tests/kyua-cli/utils/process/status_test
-${TESTS}tests/kyua-cli/utils/process/systembuf_test
-${TESTS}tests/kyua-cli/utils/releaser_test
-${TESTS}tests/kyua-cli/utils/sanity_test
-${TESTS}tests/kyua-cli/utils/signals/Kyuafile
-${TESTS}tests/kyua-cli/utils/signals/exceptions_test
-${TESTS}tests/kyua-cli/utils/signals/interrupts_test
-${TESTS}tests/kyua-cli/utils/signals/misc_test
-${TESTS}tests/kyua-cli/utils/signals/programmer_test
-${TESTS}tests/kyua-cli/utils/sqlite/Kyuafile
-${TESTS}tests/kyua-cli/utils/sqlite/c_gate_test
-${TESTS}tests/kyua-cli/utils/sqlite/database_test
-${TESTS}tests/kyua-cli/utils/sqlite/exceptions_test
-${TESTS}tests/kyua-cli/utils/sqlite/statement_test
-${TESTS}tests/kyua-cli/utils/sqlite/transaction_test
-${TESTS}tests/kyua-cli/utils/stream_test
-${TESTS}tests/kyua-cli/utils/text/Kyuafile
-${TESTS}tests/kyua-cli/utils/text/exceptions_test
-${TESTS}tests/kyua-cli/utils/text/operations_test
-${TESTS}tests/kyua-cli/utils/text/table_test
-${TESTS}tests/kyua-cli/utils/text/templates_test
-${TESTS}tests/kyua-cli/utils/units_test
