@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2014/08/08 14:29:53 jmmv Exp $
-
-SHA1 (kyua-testers-0.3.tar.gz) = 0f347efa73de306539363d36c8435571bfa31f7f
-RMD160 (kyua-testers-0.3.tar.gz) = 48c88d9341cd5910661d641727da75f14cb7cfbf
-Size (kyua-testers-0.3.tar.gz) = 185769 bytes
