@@ -1,0 +1,203 @@
+@comment $NetBSD: PLIST,v 1.1 2014/08/14 14:14:52 jmmv Exp $
+bin/kyua
+libexec/kyua-atf-tester
+libexec/kyua-plain-tester
+libexec/kyua-tap-tester
+man/man1/kyua-about.1
+man/man1/kyua-atf-tester.1
+man/man1/kyua-config.1
+man/man1/kyua-db-exec.1
+man/man1/kyua-db-migrate.1
+man/man1/kyua-debug.1
+man/man1/kyua-help.1
+man/man1/kyua-list.1
+man/man1/kyua-plain-tester.1
+man/man1/kyua-report-html.1
+man/man1/kyua-report-junit.1
+man/man1/kyua-report.1
+man/man1/kyua-tap-tester.1
+man/man1/kyua-test.1
+man/man1/kyua-tester.1
+man/man1/kyua.1
+man/man5/kyua-tester-list.5
+man/man5/kyua-tester-result.5
+man/man5/kyua.conf.5
+man/man5/kyuafile.5
+man/man7/kyua-atf-interface.7
+man/man7/kyua-build-root.7
+man/man7/kyua-plain-interface.7
+man/man7/kyua-results-files.7
+man/man7/kyua-tap-interface.7
+man/man7/kyua-test-filters.7
+share/doc/kyua/AUTHORS
+share/doc/kyua/COPYING
+share/doc/kyua/NEWS
+share/doc/kyua/README
+share/kyua/examples/Kyuafile.top
+share/kyua/examples/kyua.conf
+share/kyua/misc/context.html
+share/kyua/misc/index.html
+share/kyua/misc/report.css
+share/kyua/misc/test_result.html
+share/kyua/store/migrate_v1_v2.sql
+share/kyua/store/migrate_v2_v3.sql
+share/kyua/store/schema_v3.sql
+${TESTS}tests/Kyuafile
+${TESTS}tests/kyua/Kyuafile
+${TESTS}tests/kyua/bootstrap/Kyuafile
+${TESTS}tests/kyua/bootstrap/atf_helpers
+${TESTS}tests/kyua/bootstrap/plain_helpers
+${TESTS}tests/kyua/bootstrap/testsuite
+${TESTS}tests/kyua/cli/Kyuafile
+${TESTS}tests/kyua/cli/cmd_about_test
+${TESTS}tests/kyua/cli/cmd_config_test
+${TESTS}tests/kyua/cli/cmd_db_exec_test
+${TESTS}tests/kyua/cli/cmd_debug_test
+${TESTS}tests/kyua/cli/cmd_help_test
+${TESTS}tests/kyua/cli/cmd_list_test
+${TESTS}tests/kyua/cli/cmd_test_test
+${TESTS}tests/kyua/cli/common_test
+${TESTS}tests/kyua/cli/config_test
+${TESTS}tests/kyua/cli/main_test
+${TESTS}tests/kyua/engine/Kyuafile
+${TESTS}tests/kyua/engine/config_test
+${TESTS}tests/kyua/engine/context_test
+${TESTS}tests/kyua/engine/drivers/Kyuafile
+${TESTS}tests/kyua/engine/drivers/list_tests_helpers
+${TESTS}tests/kyua/engine/drivers/list_tests_test
+${TESTS}tests/kyua/engine/drivers/scan_results_test
+${TESTS}tests/kyua/engine/exceptions_test
+${TESTS}tests/kyua/engine/filters_test
+${TESTS}tests/kyua/engine/kyuafile_test
+${TESTS}tests/kyua/engine/metadata_test
+${TESTS}tests/kyua/engine/report_junit_test
+${TESTS}tests/kyua/engine/test_case_atf_helpers
+${TESTS}tests/kyua/engine/test_case_plain_helpers
+${TESTS}tests/kyua/engine/test_case_test
+${TESTS}tests/kyua/engine/test_program_test
+${TESTS}tests/kyua/engine/test_result_test
+${TESTS}tests/kyua/engine/testers_test
+${TESTS}tests/kyua/examples/Kyuafile
+${TESTS}tests/kyua/examples/syntax_test
+${TESTS}tests/kyua/integration/Kyuafile
+${TESTS}tests/kyua/integration/cmd_about_test
+${TESTS}tests/kyua/integration/cmd_config_test
+${TESTS}tests/kyua/integration/cmd_db_exec_test
+${TESTS}tests/kyua/integration/cmd_db_migrate_test
+${TESTS}tests/kyua/integration/cmd_debug_test
+${TESTS}tests/kyua/integration/cmd_help_test
+${TESTS}tests/kyua/integration/cmd_list_test
+${TESTS}tests/kyua/integration/cmd_report_html_test
+${TESTS}tests/kyua/integration/cmd_report_junit_test
+${TESTS}tests/kyua/integration/cmd_report_test
+${TESTS}tests/kyua/integration/cmd_test_test
+${TESTS}tests/kyua/integration/global_test
+${TESTS}tests/kyua/integration/helpers/bad_test_program
+${TESTS}tests/kyua/integration/helpers/bogus_test_cases
+${TESTS}tests/kyua/integration/helpers/config
+${TESTS}tests/kyua/integration/helpers/expect_all_pass
+${TESTS}tests/kyua/integration/helpers/expect_some_fail
+${TESTS}tests/kyua/integration/helpers/interrupts
+${TESTS}tests/kyua/integration/helpers/metadata
+${TESTS}tests/kyua/integration/helpers/simple_all_pass
+${TESTS}tests/kyua/integration/helpers/simple_some_fail
+${TESTS}tests/kyua/store/Kyuafile
+${TESTS}tests/kyua/store/dbtypes_test
+${TESTS}tests/kyua/store/exceptions_test
+${TESTS}tests/kyua/store/layout_test
+${TESTS}tests/kyua/store/metadata_test
+${TESTS}tests/kyua/store/migrate_test
+${TESTS}tests/kyua/store/read_backend_test
+${TESTS}tests/kyua/store/read_transaction_test
+${TESTS}tests/kyua/store/schema_inttest
+${TESTS}tests/kyua/store/schema_v1.sql
+${TESTS}tests/kyua/store/schema_v2.sql
+${TESTS}tests/kyua/store/testdata_v1.sql
+${TESTS}tests/kyua/store/testdata_v2.sql
+${TESTS}tests/kyua/store/testdata_v3_1.sql
+${TESTS}tests/kyua/store/testdata_v3_2.sql
+${TESTS}tests/kyua/store/testdata_v3_3.sql
+${TESTS}tests/kyua/store/testdata_v3_4.sql
+${TESTS}tests/kyua/store/transaction_test
+${TESTS}tests/kyua/store/write_backend_test
+${TESTS}tests/kyua/store/write_transaction_test
+${TESTS}tests/kyua/testers/Kyuafile
+${TESTS}tests/kyua/testers/atf_helpers
+${TESTS}tests/kyua/testers/atf_inttest
+${TESTS}tests/kyua/testers/atf_list_test
+${TESTS}tests/kyua/testers/atf_result_test
+${TESTS}tests/kyua/testers/cli_test
+${TESTS}tests/kyua/testers/env_test
+${TESTS}tests/kyua/testers/error_test
+${TESTS}tests/kyua/testers/fs_test
+${TESTS}tests/kyua/testers/plain_helpers
+${TESTS}tests/kyua/testers/plain_inttest
+${TESTS}tests/kyua/testers/result_test
+${TESTS}tests/kyua/testers/run_test
+${TESTS}tests/kyua/testers/stacktrace_helper
+${TESTS}tests/kyua/testers/stacktrace_test
+${TESTS}tests/kyua/testers/tap_helpers
+${TESTS}tests/kyua/testers/tap_inttest
+${TESTS}tests/kyua/testers/tap_parser_test
+${TESTS}tests/kyua/testers/text_test
+${TESTS}tests/kyua/utils/Kyuafile
+${TESTS}tests/kyua/utils/auto_array_test
+${TESTS}tests/kyua/utils/cmdline/Kyuafile
+${TESTS}tests/kyua/utils/cmdline/base_command_test
+${TESTS}tests/kyua/utils/cmdline/commands_map_test
+${TESTS}tests/kyua/utils/cmdline/exceptions_test
+${TESTS}tests/kyua/utils/cmdline/globals_test
+${TESTS}tests/kyua/utils/cmdline/options_test
+${TESTS}tests/kyua/utils/cmdline/parser_test
+${TESTS}tests/kyua/utils/cmdline/ui_test
+${TESTS}tests/kyua/utils/config/Kyuafile
+${TESTS}tests/kyua/utils/config/exceptions_test
+${TESTS}tests/kyua/utils/config/keys_test
+${TESTS}tests/kyua/utils/config/lua_module_test
+${TESTS}tests/kyua/utils/config/nodes_test
+${TESTS}tests/kyua/utils/config/parser_test
+${TESTS}tests/kyua/utils/config/tree_test
+${TESTS}tests/kyua/utils/datetime_test
+${TESTS}tests/kyua/utils/env_test
+${TESTS}tests/kyua/utils/format/Kyuafile
+${TESTS}tests/kyua/utils/format/exceptions_test
+${TESTS}tests/kyua/utils/format/formatter_test
+${TESTS}tests/kyua/utils/fs/Kyuafile
+${TESTS}tests/kyua/utils/fs/auto_cleaners_test
+${TESTS}tests/kyua/utils/fs/exceptions_test
+${TESTS}tests/kyua/utils/fs/lua_module_test
+${TESTS}tests/kyua/utils/fs/operations_test
+${TESTS}tests/kyua/utils/fs/path_test
+${TESTS}tests/kyua/utils/logging/Kyuafile
+${TESTS}tests/kyua/utils/logging/macros_test
+${TESTS}tests/kyua/utils/logging/operations_test
+${TESTS}tests/kyua/utils/memory_test
+${TESTS}tests/kyua/utils/optional_test
+${TESTS}tests/kyua/utils/passwd_test
+${TESTS}tests/kyua/utils/process/Kyuafile
+${TESTS}tests/kyua/utils/process/child_test
+${TESTS}tests/kyua/utils/process/exceptions_test
+${TESTS}tests/kyua/utils/process/fdstream_test
+${TESTS}tests/kyua/utils/process/helpers
+${TESTS}tests/kyua/utils/process/status_test
+${TESTS}tests/kyua/utils/process/systembuf_test
+${TESTS}tests/kyua/utils/releaser_test
+${TESTS}tests/kyua/utils/sanity_test
+${TESTS}tests/kyua/utils/signals/Kyuafile
+${TESTS}tests/kyua/utils/signals/exceptions_test
+${TESTS}tests/kyua/utils/signals/interrupts_test
+${TESTS}tests/kyua/utils/signals/misc_test
+${TESTS}tests/kyua/utils/signals/programmer_test
+${TESTS}tests/kyua/utils/sqlite/Kyuafile
+${TESTS}tests/kyua/utils/sqlite/c_gate_test
+${TESTS}tests/kyua/utils/sqlite/database_test
+${TESTS}tests/kyua/utils/sqlite/exceptions_test
+${TESTS}tests/kyua/utils/sqlite/statement_test
+${TESTS}tests/kyua/utils/sqlite/transaction_test
+${TESTS}tests/kyua/utils/stream_test
+${TESTS}tests/kyua/utils/text/Kyuafile
+${TESTS}tests/kyua/utils/text/exceptions_test
+${TESTS}tests/kyua/utils/text/operations_test
+${TESTS}tests/kyua/utils/text/table_test
+${TESTS}tests/kyua/utils/text/templates_test
+${TESTS}tests/kyua/utils/units_test
